--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,6 @@ jobs:
         uses: goreleaser/goreleaser-action@master
         with:
           version: latest
-          args: release -f .goreleaser.yml --rm-dist
+          args: release -f .github/.goreleaser.yml --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
